Overflow issue fixed.

--- a/EComerceProductShowcase/style.css
+++ b/EComerceProductShowcase/style.css
@@ -8,13 +8,12 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.6;
   color: #333;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 nav {
   position: sticky;
   top: 0;
-  /* overflow: hidden; */
   width: 100%;
   z-index: 9999;
 }
